Prepare for release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,27 @@
+Version 1.0.0 (2020-04-05)
+--------------------------
+Fix handling of $schema on body extraction (#24)
+Expose input in ParseError message (#53)
+Add codec for SchemaCriterion (#18)
+Use sbt-mima-plugin to analyse binary compatibility (#30)
+Use sbt-scoverage plugin to analyse test coverage (#31)
+Use sbt-ghpages plugin to create GH Pages from Scaladoc (#32)
+Bump specs2 to 4.7.1 (#37)
+Bump circe to 0.13.0 (#36)
+Bump sbt to 1.3.9 (#44)
+Bump Scala to 2.12.10 (#55)
+Remove Libraries object in Dependencies.scala (#45)
+Iglu Core Circe: remove implicits.scala and rename instances.scala to implicits.scala (#49)
+Iglu Core Json4s: remove implicits.scala and rename instances.scala to implicits.scala (#57)
+Iglu Core Circe: fix typo in instances.igluAttachToDataCirce (#50)
+Iglu Core Circe: fix typo in DecordersSpec.scala (#52)
+Extend copyright to 2020 (#56)
+Combine scalacOptions and javacOptions in compilerSettings (#47)
+Add projectSettings for each module (#46)
+Change Travis distribution to Trusty (#35)
+Use sbt-scalafmt plugin (#43)
+Improve Scaladocs (#48)
+
 Version 0.5.1 (2019-05-09)
 --------------------------
 Allow SchemaList to not start with 1-0-0 (#16)
