--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,26 @@
+Version 1.0.1 (2021-08-28)
+--------------------------
+Protect against Integer overflow (#63)
+Fix SchemaCriterion object codecs (#61)
+Add test for trying to parse a URL-encoded schema key (#84)
+Bump specs2 to 4.12.3 (#82)
+Bump json4s to 3.6.11 (#81)
+Bump cats to 2.6.1 (#80)
+Bump circe to 0.14.1 (#79)
+Add Snyk Github Action workflow (#78)
+Update README and links (including switch from snowplow-incubator to snowplow) (#77)
+Update git remote in ghpages settings (snowplow-incubator -> snowplow) (#76)
+Bump Scala to 2.13.6 and 2.12.14, switch to sbt-tpolecat for scalac flags management and fix some warnings (#75)
+Bump sbt-scoverage to 1.8.2 (and update config key name) and sbt-coveralls to 1.3.1 (#74)
+Remove sbt-git, bump sbt-site to 1.4.1 and sbt-unidoc to 0.4.3 (#73)
+Switch publishing from Bintray to Maven Central (#72)
+Switch from TravisCI to GitHub Actions (#71)
+Bump sbt-mima-plugin to 0.9.2 and add sbt-ci-release plugin to switch to dynamic version management (#70)
+Bump sbt-scalafmt to 2.4.3 and fmt project files (#69)
+Restructure sbt modules for easier testing and release (#68)
+Bump sbt to 1.5.5 (#67)
+Add IDE and tools folders to .gitignore (#66)
+
 Version 1.0.0 (2020-04-14)
 --------------------------
 Fix handling of $schema on body extraction (#24)
