--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+Version 1.1.1 (2022-08-17)
+--------------------------
+Bump specs2 to 4.15.0 (#90)
+Bump json4s-jackson to 3.6.12 (#90)
+Bump cats-core to 2.8.0 (#90)
+Bump circe to 0.14.2 (#90)
+Fix the version of jackson-databind to 2.13.2.1 (#90)
+
 Version 1.1.0 (2022-04-27)
 --------------------------
 Extend Copyright to 2022 (#88)
