--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.1.3 (2023-01-17)
+--------------------------
+Build and publish for scala 3 (#98)
+
 Version 1.1.2 (2023-01-10)
 --------------------------
 Update license to 2023 (#96)
