--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 1.1.4 (2025-04-17)
+--------------------------
+Add vendorAsSnakeCase and nameAsSnakeCase (#101)
+Install sbt in github actions (#102)
+
 Version 1.1.3 (2023-01-17)
 --------------------------
 Build and publish for scala 3 (#98)
